[package]
name = "boxfnonce"
# also bump version in html_root_url in src/lib.rs
version = "0.1.1"
authors = ["Stefan Bühler <stbuehler@web.de>"]
description = "safe FnOnce boxing for rust stable"
documentation = "https://stbuehler.github.io/rustdocs/boxfnonce/boxfnonce/"
homepage = "https://github.com/stbuehler/rust-boxfnonce"
repository = "https://github.com/stbuehler/rust-boxfnonce"
readme = "README.md"
keywords = ["Box", "FnOnce"]
license = "MIT"

[badges]
travis-ci = { repository = "stbuehler/rust-boxfnonce" }
appveyor = { repository = "stbuehler/rust-boxfnonce" }

[dependencies]
